2262.	[bug]		Error status from all but the last view could be
			lost. [RT #17292]

2258.	[bug]		Fallback from IXFR/TSIG to SOA/AXFR/TSIG broken.
			[RT #17241]

2257.	[bug]		win32: Use the full path to vcredist_x86.exe when
			calling it. [RT #17222]

2256.	[bug]		win32: Correctly register the installation location of
			bindevt.dll. [RT #17159]

2255.	[bug]		L.ROOT-SERVERS.NET is now 199.7.83.42.

2254.	[bug]		timer.c:dispatch() failed to lock timer->lock
			when reading timer->idle allowing it to see
			intermediate values as timer->idle was reset by
			isc_timer_touch(). [RT #17243]

2251.	[doc]		Update memstatistics-file documentation to reflect
			reality. Note there is behaviour change for BIND 9.5.
			[RT #17113]

2249.   [bug]           Only set Authentic Data bit if client requested
                        DNSSEC, per RFC 3655 [RT #17175]

2248.   [cleanup]       Fix several errors reported by Coverity. [RT #17160]

2247.	[doc]		Sort doc/misc/options. [RT #17067]

2246.	[bug]		Make the startup of test servers (ans.pl) more
			robust. [RT #17147]

2245.	[bug]		Validating lack of DS records at trust anchors wasn't
			working. [RT #17151]

2238.	[bug]		It was possible to trigger a REQUIRE when a
			validation was cancelled. [RT #17106]

2237.	[bug]		libbind: res_init() was not thread aware. [RT #17123]

2236.	[bug]		dnssec-signzone failed to preserve the case of
			of wildcard owner names. [RT #17085]

2234.   [port]          Correct some compiler warnings on SCO OSr5 [RT #17134]
  
2229.	[bug]		Null pointer dereference on query pool creation
 			failure. [RT #17133]
 
2232.	[bug]		dns_adb_findaddrinfo() could fail and return
			ISC_R_SUCCESS. [RT #17137]

2230.	[bug]		We could INSIST reading a corrupted journal.
			[RT #17132]

2228.	[contrib]	contrib: Change 2188 was incomplete.

2227.	[cleanup]	Tidied up the FAQ. [RT #17121]

2226.   [bug]           Fix build error.  [RT #17124]

2225.	[bug]		More support for systems with no IPv4 addresses.